--- a/frontend/src/components/FieldView/FieldView.styles.scss
+++ b/frontend/src/components/FieldView/FieldView.styles.scss
@@ -27,6 +27,7 @@
   &-ValueLabel {
     position: relative;
     color: $mainTextColor;
+    word-wrap: break-word;
 
     &-empty {
       color: $emptyTextColor;
